@@ -1,3 +1,8 @@
+2006-08-09  Paolo Borelli  <pborelli@katamail.com>
+
+	* plugins/spell/gedit-spell-plugin.c: fix autospell state when
+	switching tab.
+
 2006-08-08  Paolo Borelli  <pborelli@katamail.com>
 
 	* gedit/gedit-window.c: fix a crash in recents file code.
